devtools/tests/should_fail/def_cycle_simple.p
fof(d0, definition, ~d1).
fof(d1, definition, ~d0).
